[iOS-KT003] fixing bug and complete the view with error message

--- a/KumparanTest/Common/Localizable/en.lproj/Localizable.strings
+++ b/KumparanTest/Common/Localizable/en.lproj/Localizable.strings
@@ -8,6 +8,9 @@
 
 // MARK: - General
 "server_error_text" = "Can't load data from server";
+"data_empty_text" = "Uh oh, the data is empty :(";
+"ok_text" = "OK";
+"attention_text" = "Attention"
 
 // MARK: - Post List View
 "post_list_view_navigation_title" = "Posts";
